--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,17 @@ on:
     branches: [ "main" ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Test
+      run: go test -v ./...
 
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - uses: actions/checkout@v4
 
@@ -17,6 +25,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.18'
+
 
     - name: Build linux-amd64
       run: go build -o bootable-linux-amd64 .
