--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,6 @@ jobs:
         name: bootable-executables
         path: |
           bootable-linux-amd64
-          bootable-windows-amd64.exe
 
   release:
     runs-on: ubuntu-latest
@@ -59,7 +58,7 @@ jobs:
           release_name: Release ${{ github.ref_name }}
           body: |
             ## Release Notes
-            This release contains the `bootable` executable for Linux and Windows (amd64 architectures).
+            This release contains the `bootable` executable for Linux (amd64 architectures).
             Download the appropriate version for your operating system and architecture.
           draft: false
           prerelease: false
@@ -72,14 +71,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./bootable-linux-amd64
           asset_name: bootable-linux-amd64
-          asset_content_type: application/octet-stream
-
-      - name: Upload Windows executable asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bootable-windows-amd64.exe
-          asset_name: bootable-windows-amd64.exe
           asset_content_type: application/octet-stream
